# InstantlySkipDialogueNG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: version.rc.in
config/: InstantlySkipDialogueNG.ini
src/: Main.cpp  Settings.cpp  Settings.h
